--- a/v0/index.html
+++ b/v0/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div>組件功能</div>    
+    <div>錨組件功能</div>    
     <div id="example01"></div>
     <div id="example02"></div>
     <div id="example03"></div>
